# pulsar

./: Cargo.toml  Pulsar Heirachy.drawio
benches/: main.rs  world.rs
crates/accelerator/: Cargo.toml
crates/accelerator/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core-lib/: Cargo.toml
crates/core-lib/src/system/: mod.rs
crates/core/src/component/: mod.rs
crates/core/src/entity/tests/: mod.rs
crates/listener/: Cargo.toml
crates/listener/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/primitives/src/integer/: mod.rs
crates/primitives/src/integer/i16/: mod.rs
crates/primitives/src/integer/i32/: mod.rs
crates/primitives/src/integer/i64/: mod.rs
crates/primitives/src/integer/i8/: mod.rs
crates/pulsar-core/: Cargo.toml
crates/pulsar-core/src/: lib.rs
crates/pulsar-core/src/component/: mod.rs
crates/pulsar-core/src/connector/: mod.rs
crates/pulsar-core/src/entity/: mod.rs
crates/pulsar-core/src/instance/: mod.rs
crates/pulsar-core/src/interactor/: mod.rs
crates/pulsar-core/src/message/: mod.rs
crates/pulsar-core/src/settings/: mod.rs
crates/pulsar-core/src/state/: mod.rs
crates/pulsar-core/src/task/: mod.rs
crates/pulsar-core/src/window/: mod.rs
crates/pulsar-defaults/: Cargo.toml
crates/pulsar-defaults/src/: lib.rs
crates/pulsar-defaults/src/connectors/: mod.rs
crates/pulsar-defaults/src/coupler/: mod.rs
crates/pulsar-instancing/: Cargo.toml
crates/pulsar-instancing/src/: lib.rs
crates/pulsar-instancing/src/connector/: mod.rs
crates/pulsar-instancing/src/coupler/: mod.rs
crates/pulsar-instancing/src/listener/: mod.rs
crates/pulsar-macros/: Cargo.toml
crates/pulsar-macros/src/: lib.rs
crates/stdlib/src/: lib.rs
crates/stdlib/src/entity/: mod.rs
crates/stdlib/src/world/: mod.rs
src/: lib.rs
src/archetypes/: mod.rs
src/component/: mod.rs
src/connector/: mod.rs
src/entity/: mod.rs
src/entity/manager/: mod.rs
src/entity/manager/keys/: mod.rs
src/game/: mod.rs
src/instance/: mod.rs
src/interactor/: mod.rs
src/interactor/router/: mod.rs
src/message/: mod.rs
src/system/: mod.rs
src/world/: mod.rs
src/world/entity_manager/: mod.rs
src/world/entity_manager/keys/: mod.rs
src/world/id_pool/: mod.rs
(+8 files in other folders)
