[package]
name = "pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/*" ]

[lib]
crate-type = [ "rlib" ]

[features]
default = [ "core" ]
core = [ ]
controller = [ "core", "dep:controller" ]
listener = [ "core", "dep:listener" ]
accelerator = [ "core", "dep:accelerator" ]

[dependencies]
core = { path = "crates/core" }
controller = { path = "crates/controller", optional = true }
listener = { path = "crates/listener", optional = true }
accelerator = { path = "crates/accelerator", optional = true }


[dev-dependencies]
criterion = "0.4.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
