[package]
name = "pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "lib" ]

[workspace]
members = [ "crates/*" ]

[features]
default = [ ]
defaults = [ "dep:pulsar-defaults" ]

[dependencies]
pulsar-defaults = { path = "./crates/pulsar-defaults", optional = true }
pulsar-core = { path = "./crates/pulsar-core" }

[dev-dependencies]
criterion = "0.4"
half = "*"
num-traits = "*"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

# Benchmarks
[[bench]]
name = "main"
harness = false
