[package]
name = "pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/*" ]

[lib]
crate-type = [ "rlib" ]

[features]
default = [ "core" ]
core = [ ]
controller = [ "core", "dep:controller" ]
listener = [ "core", "dep:listener" ]
accelerator = [ "core", "dep:accelerator" ]

[dependencies]
core_lib = { path = "crates/core-lib", package = "core-lib" }
controller = { path = "crates/controller", optional = true }
listener = { path = "crates/listener", optional = true }
accelerator = { path = "crates/accelerator", optional = true }


[dev-dependencies]
criterion = "0.4"
half = "*"
num-traits = "*"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

# Benchmarks
[[bench]]
name = "main"
harness = false
